--- a/index.html
+++ b/index.html
@@ -56,12 +56,21 @@
     </div>
 
     <div class="row d-block d-xl-none">
-        <div class="col-12 collapse bg-brand" id="hamburgerMenu">
-            <!-- TODO MENU選單 -->
+        <div class="col-8 offset-2 collapse bg-base py-3 py-sm-5" id="hamburgerMenu">
             <a href="#" class="navbar-brand">
-                <img src="assets/logo/LOGO-W.png" alt="WANA-Logo" />
+                <img src="assets/logo/LOGO-W.png" class="img-fluid" alt="WANA-Logo" />
             </a>
+            <ul class="text-center py-3 py-sm-5">
+                <li><a class="nav-link text-white" href="#about">About</a></li>
+                <li><a class="nav-link text-white" href="#roadmap">Roadmap</a></li>
+                <li><a class="nav-link text-white" href="#faq">FAQ</a></li>
+                <li><a class="nav-link disabled" href="#">Team</a></li>
+                <li><a class="nav-link disabled" href="#">Collection</a></li>
+                <li><a class="nav-link disabled" href="#">Mint</a></li>
+                <li><a class="nav-link disabled" href="#">MyWANA</a></li>
+            </ul>
         </div>
+
         <a href="#hamburgerMenu" data-bs-toggle="collapse" data-bs-target="#hamburgerMenu"><span class="navbar-toggler-icon hamburger-menu"></span></a>
     </div>
 </nav>
@@ -661,7 +670,7 @@
                         <a class="nav-link text-white" href="https://www.facebook.com/wananft" target="_blank"><img src="assets/icon/FacebookLogo.png" height="40" alt="facebook"/></a>
                     </div>
                 </div>
-                <hr style color=white, size="2">
+                <hr>
                 <hr class="text-white">
                 <div class="row text-center">
                     <a class ="text-white">@ 2022 WANA</a>
