--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 
 <!-- 第四部分 嘿，一起拯救WANA星球吧！ -->
 <div class="container-fluid text-center">
-    <h2 class="text-white banner-text-lg py-5 my-5" id="about">嘿，一起拯救WANA星球吧！</h2>
+    <h2 class="text-white banner-text-h1 py-5 my-5" id="about">嘿，一起拯救WANA星球吧！</h2>
 </div>
 
 <!-- 第五部分 A&N-->
@@ -107,46 +107,46 @@
 <!-- TODO: 手機版沒有hover，希望拉到可視範圍再跑圖 -->
 <div class="container text-start">
     <div class="row mb-5">
-        <div class="col-5">
+        <div class="col-12 col-lg-5">
             <div class="animate-on-hover banner-layout bg-full" style="background-image: url('assets/image/Animate_1.png')"></div>
         </div>
-        <div class="col-7">
-            <p class="banner-layout d-flex align-items-center text-white banner-long-text ps-md-5 ms-lg-5">
+        <div class="col-12 col-lg-7">
+            <p class="banner-layout d-flex align-items-center text-white banner-text-h6 ps-md-5 ms-lg-5">
                 距離地球約 31800 光年的 WANA 星，閃耀著溫暖的紫黃色，瀰漫著一股天真爛漫，它的白天由一身雪白色的 Abel 精靈守護，夜晚則由紫藍色的 Nydia 精靈管理，每當黃昏時，他倆會在分身之時享受短暫美好的時光，直到某一天......
             </p>
         </div>
     </div>
 
     <div class="row mb-5">
-        <div class="col-7">
-            <p class="banner-layout d-flex align-items-center text-white banner-long-text ps-md-5 ms-lg-5">
+        <div class="col-12 col-lg-5 order-first order-lg-last">
+            <div class="animate-on-hover banner-layout bg-full" style="background-image: url('assets/image/Animate_2.png')"></div>
+        </div>
+        <div class="col-12 col-lg-7">
+            <p class="banner-layout d-flex align-items-center text-white banner-text-h6 ps-md-5 ms-lg-5">
                 一道光束從天空中打落在 Nydia 身旁，原來是來自地球的人類用光束造訪，當 Abel 開心轉過身才發現，Nydia 已被嚇得無影無蹤......
             </p>
-        </div>
-        <div class="col-5">
-            <div class="animate-on-hover banner-layout bg-full" style="background-image: url('assets/image/Animate_2.png')"></div>
         </div>
     </div>
 
     <div class="row mb-5">
-        <div class="col-5">
+        <div class="col-12 col-lg-5">
             <div class="animate-on-hover banner-layout bg-full" style="background-image: url('assets/image/Animate_3.png')"></div>
         </div>
-        <div class="col-7">
-            <p class="banner-layout d-flex align-items-center text-white banner-long-text ps-md-5 ms-lg-5">
+        <div class="col-12 col-lg-7">
+            <p class="banner-layout d-flex align-items-center text-white banner-text-h6 ps-md-5 ms-lg-5">
                 Abel 只好將超能力賦予來造訪的人類，請求能夠幫忙尋找 Nydia 以維持 WANA 星球的正常運作。
             </p>
         </div>
     </div>
 
     <div class="row mb-5">
-        <div class="col-7">
-            <p class="banner-layout d-flex align-items-center text-white banner-long-text ps-md-5 ms-lg-5">
+        <div class="col-12 col-lg-5 order-first order-lg-last">
+            <div class="animate-on-hover banner-layout bg-full" style="background-image: url('assets/image/Animate_4.png')"></div>
+        </div>
+        <div class="col-12 col-lg-7">
+            <p class="banner-layout d-flex align-items-center text-white banner-text-h6 ps-md-5 ms-lg-5">
                 Abel 陸續將金、木、水、火、土五種分別放置在 999 位超能人類身上，獲得特殊能力的人類，在外貌上也逐漸改變...
             </p>
-        </div>
-        <div class="col-5">
-            <div class="animate-on-hover banner-layout bg-full" style="background-image: url('assets/image/Animate_4.png')"></div>
         </div>
     </div>
 </div>
@@ -154,7 +154,7 @@
 
 <!-- 第六部分 成為家族中的一員-->
 <div class="container-fluid text-center py-5">
-    <h2 class="text-white banner-text-lg py-5">成為獨一無二的 WANA 超能人</h2>
+    <h2 class="text-white banner-text-h1 py-5">成為獨一無二的 WANA 超能人</h2>
 </div>
 <!-- 第七部分 人物區-->
 <div class="swiper character">
@@ -183,20 +183,20 @@
 
 <!-- 第九部分 成為WANA Pixel超人後，你擁有的超能力！獲得家族皮膚，跟你的家族夥伴一同奮戰！-->
 <div class="container-fluid text-center py-5 my-5">
-    <h3 class="text-white banner-text-lg">你擁有的能力！</h3>
-    <h3 class="text-white banner-text-md">獲得家族皮膚，跟你的家族夥伴一同奮戰！</h3>
+    <h3 class="text-white banner-text-h1">你擁有的能力！</h3>
+    <h3 class="text-white banner-text-h2">獲得家族皮膚，跟你的家族夥伴一同奮戰！</h3>
 </div>
 
 <!-- 第十部分 五角形的圖、第十一部分 金木水火土-->
 <div class="container">
-    <div class="row align-items-center">
-        <div class="col-6">
+    <div class="row justify-content-center text-center align-items-center">
+        <div class="col-12 col-lg-6">
             <img src="assets/image/FivePhases.png" class="img-fluid"/>
         </div>
-        <div class="col-6">
+        <div class="col-12 col-lg-6">
             <div class="container-fluid text-center py-5">
-                <h3 class="text-white banner-text-md">金、木、水、火、土</h3>
-                <p class="text-white text-start banner-text-sm py-5">
+                <h3 class="text-white banner-text-h2">金、木、水、火、土</h3>
+                <p class="text-white text-start banner-text-h4 py-5">
                     當盲盒開啟時，將會決定你屬於哪個陣營，每個屬性角色將擁有特殊能力，在之後的戰鬥與家族合作遊戲中展露頭角，快加入社群尋找你的家族夥伴吧！
                 </p>
             </div>
@@ -206,8 +206,8 @@
 
 <!-- 第十二部分 創造屬於你的Pixel超能人-->
 <!-- TODO 背景底圖漸層 -->
-<div class="container-fluid text-center py-5 my-5">
-    <h3 class="text-white banner-text-lg py-5">
+<div class="container-fluid text-center py-0 px-md-5 my-0 my-md-5">
+    <h3 class="text-white banner-text-h1 py-5">
         盡情更換配件，<br>
         創造屬於你的超能人。</h3>
 </div>
@@ -362,7 +362,7 @@
 <div class="container py-5">
     <div class="row justify-content-center">
         <div class="col-9">
-            <p class="text-white banner-text-sm py-5">
+            <p class="text-white banner-text-h4 py-5">
                 在 WANA 世界中，你擁有的每個配件都可以自由任意搭配，創造屬於自己獨一無二的樣式，你也可以在社群中寫下想獲得的配件樣式，快來加入我們一起創造 WANA 超能人吧！
             </p>
         </div>
@@ -373,16 +373,16 @@
 
 
 <!-- 第十六部分 配件稀有度-->
-<div class="container-fluid text-center py-5">
-    <h2 class="text-white banner-text-lg py-5">配件稀有度</h2>
+<div class="container-fluid text-center py-0 py-md-5">
+    <h2 class="text-white banner-text-h1 py-0 px-md-5">配件稀有度</h2>
 </div>
 
 <!-- 第十七部分 配件金字塔-->
 <div class="container py-5">
     <div class="row align-items-center">
-        <div class="col-6">
+        <div class="col-12 col-lg-6">
             <div class="container-fluid text-center py-5">
-                <p class="text-white banner-text-sm text-start py-5">
+                <p class="text-white banner-text-h4 text-start py-5">
                     超能人包含金皮膚、水皮膚、木皮膚、火皮膚、土皮膚，有不同的髮型、眼睛、背景、服裝等，第一階段共有 205 種配件自由組合，每個 配件都有獨特的個性和風格。
                     <br>
                     <br>
@@ -390,7 +390,7 @@
                 </p>
             </div>
         </div>
-        <div class="col-6 text-center">
+        <div class="col-12 col-lg-6 text-center order-first order-lg-last">
             <img src="assets/image/rarity.gif" class="img-fluid radius-3 lighting-con"/>
         </div>
     </div>
@@ -401,7 +401,7 @@
     <div class="row justify-content-center">
         <div class="col-10">
             <div class="text-center bg-dark lighting-div my-5 py-3 roadmap-box radius-3">
-                <h2 class="text-white banner-text-lg py-5">Roadmap</h2>
+                <h2 class="text-white banner-text-h1 py-5">Roadmap</h2>
 
                 <!-- 10% -->
                 <div class="row py-5 mb-3">
@@ -410,8 +410,8 @@
                     </div>
                     <div class="col-12 col-lg-7">
                         <div class="d-flex flex-column align-items-start px-5 ps-lg-0 align-items-center align-items-lg-start">
-                            <h3 class="text-white banner-text-md py-4 py-lg-2 ms-2 ms-lg-0">10%</h3>
-                            <ul class="text-white banner-text-sm text-start">
+                            <h3 class="text-white banner-text-h2 py-4 py-lg-2 ms-2 ms-lg-0">10%</h3>
+                            <ul class="text-white banner-text-h4 text-start">
                                 <li>客製募資計畫：為早期投資者創造專屬WAVATAR</li>
                                 <li>區塊鏈知識推廣</li>
                                 <li>FreeMint活動進行</li>
@@ -427,8 +427,8 @@
                     </div>
                     <div class="col-12 col-lg-7">
                         <div class="d-flex flex-column align-items-start px-5 ps-lg-0 align-items-center align-items-lg-start">
-                            <h3 class="text-white banner-text-md py-4 py-lg-2 ms-2 ms-lg-0">20%</h3>
-                            <ul class="text-white banner-text-sm text-start">
+                            <h3 class="text-white banner-text-h2 py-4 py-lg-2 ms-2 ms-lg-0">20%</h3>
+                            <ul class="text-white banner-text-h4 text-start">
                                 <li>第一波鑄造 999 隻 WAVATAR 超能人：持有者享有投票權利，可決定配件 2.0 樣式走向。</li>
                                 <li>盲盒開啟後可在官網自由更換人像配件，組合出專屬於你的超能人！</li>
                             </ul>
@@ -443,8 +443,8 @@
                     </div>
                     <div class="col-12 col-lg-7">
                         <div class="d-flex flex-column align-items-start px-5 ps-lg-0 align-items-center align-items-lg-start">
-                            <h3 class="text-white banner-text-md py-4 py-lg-2 ms-2 ms-lg-0">50%</h3>
-                            <ul class="text-white banner-text-sm text-start">
+                            <h3 class="text-white banner-text-h2 py-4 py-lg-2 ms-2 ms-lg-0">50%</h3>
+                            <ul class="text-white banner-text-h4 text-start">
                                 <li>官網建立轉帳小工具，轉帳完成後掉落人像配件，可選擇是否購買。</li>
                                 <li>第二波鑄造，增加配件種類，打造更獨特的 NFT 頭像。</li>
                             </ul>
@@ -459,8 +459,8 @@
                     </div>
                     <div class="col-12 col-lg-7">
                         <div class="d-flex flex-column align-items-start px-5 ps-lg-0 align-items-center align-items-lg-start">
-                            <h3 class="text-white banner-text-md py-4 py-lg-2 ms-2 ms-lg-0">75%</h3>
-                            <ul class="text-white banner-text-sm text-start">
+                            <h3 class="text-white banner-text-h2 py-4 py-lg-2 ms-2 ms-lg-0">75%</h3>
+                            <ul class="text-white banner-text-h4 text-start">
                                 <li>打造 Web3.0 富含交易娛樂與結合 NFT 頭像之區塊鏈社群論壇：讓粉絲集中討論、獲取知識，更在平台的互動中有機會獲取獨一無二的 NFT 頭像配件！</li>
                                 <li>開發沈浸網頁遊戲，提供家族分隊遊玩，使用專屬人像在遊戲中與其他家族成員互動。</li>
                             </ul>
@@ -475,8 +475,8 @@
                     </div>
                     <div class="col-12 col-lg-7">
                         <div class="d-flex flex-column align-items-start px-5 ps-lg-0 align-items-center align-items-lg-start">
-                            <h3 class="text-white banner-text-md py-4 py-lg-2 ms-2 ms-lg-0">100%</h3>
-                            <ul class="text-white banner-text-sm text-start">
+                            <h3 class="text-white banner-text-h2 py-4 py-lg-2 ms-2 ms-lg-0">100%</h3>
+                            <ul class="text-white banner-text-h4 text-start">
                                 <li>功能優化：KOL 名人專屬私人論壇，擁有名人配件即可加入獲得與偶像互動機會！</li>
                                 <li>開放使用者自由的製作人像配件，讓使用者有一同創造與營運的感受。</li>
                                 <li>啟動WANA幣，持有者可於論壇中互動來獲得。</li>
@@ -492,7 +492,7 @@
 
 <!-- 第二二部分 超能人新手村-->
 <div class="container-fluid text-center py-5">
-    <h2 class="text-white banner-text-lg py-5">超能人新手村</h2>
+    <h2 class="text-white banner-text-h1 py-5">超能人新手村</h2>
 </div>
 <!-- 第二三部分 文章滑動區塊-->
 <div class="container-sm">
@@ -502,7 +502,7 @@
                 <div class="card article-card bg-base">
                     <img class="article-image" src="assets/image/article1.png"/>
                     <div class="card-body text-white">
-                        <h5 class="card-title banner-text-sm">SANDBOX?</h5>
+                        <h5 class="card-title banner-text-h4">SANDBOX?</h5>
                         <p class="card-text">
                             虛擬世界的土地可以改建、買賣！🤩元宇宙目前的領跑者《 The Sandbox 》
                         </p>
@@ -514,7 +514,7 @@
                 <div class="card article-card bg-base">
                     <img class="article-image" src="assets/image/article2.png"/>
                     <div class="card-body text-white">
-                        <h5 class="card-title banner-text-sm">名人堂</h5>
+                        <h5 class="card-title banner-text-h4">名人堂</h5>
                         <p class="card-text">
                             WANA名人堂！本週繪製的是 #寶博朋友說 Podcast 最新一集來賓
                         </p>
@@ -526,7 +526,7 @@
                 <div class="card article-card bg-base">
                     <img class="article-image" src="assets/image/article3.png"/>
                     <div class="card-body text-white">
-                        <h5 class="card-title banner-text-sm">漫畫連載</h5>
+                        <h5 class="card-title banner-text-h4">漫畫連載</h5>
                         <p class="card-text">
                             ABEL擁有超能力，他在星球上都在做些什麼呢？
                         </p>
@@ -546,17 +546,17 @@
 
 <!-- 第二四部分 FAQ-->
 <div class="container-fluid text-center py-5" id="faq">
-    <h2 class="text-white banner-text-lg">FAQ</h2>
+    <h2 class="text-white banner-text-h1">FAQ</h2>
 </div>
 <!-- 第二五部分 answer-->
 <div class="container">
     <ul class="row mb-3">
         <li class="col-12 my-4">
             <div class="card bg-white faq-box py-4 mx-4">
-                <a href="#faq_1" class="text-base banner-text-md text-decoration-none stretched-link text-center text-md-start px-md-5"
+                <a href="#faq_1" class="text-base banner-text-h2 text-decoration-none stretched-link text-start text-lg-center px-md-5 ps-4 ps-sm-5"
                    data-bs-toggle="collapse">Q1. 什麼是WANA ?</a>
                 <div class="collapse" id="faq_1">
-                    <div class="card-body banner-text-sm mx-3 mx-md-5">
+                    <div class="card-body banner-text-h4 mx-3 mx-md-5">
                         <p>
                             WANA 是位在 Sol 鏈上的一顆星球，通過擁有我們的 NFT 可以進入 Web3.0 新世界的旅程來創新，一種自由與包容的共同創造體驗，和我們一起創造宇宙吧！
                         </p>
@@ -567,10 +567,10 @@
 
         <li class="col-12 my-4">
             <div class="card bg-white faq-box py-4 mx-4">
-                <a href="#faq_2" class="text-base banner-text-md text-decoration-none stretched-link text-center text-md-start px-md-5"
+                <a href="#faq_2" class="text-base banner-text-h2 text-decoration-none stretched-link text-start text-lg-center px-md-5 ps-4 ps-sm-5"
                    data-bs-toggle="collapse">Q2. 發佈時間 ?</a>
                 <div class="collapse" id="faq_2">
-                    <div class="card-body banner-text-sm mx-3 mx-md-5">
+                    <div class="card-body banner-text-h4 mx-3 mx-md-5">
                         <p>
                             待定。
                         </p>
@@ -581,10 +581,10 @@
 
         <li class="col-12 my-4">
             <div class="card bg-white faq-box py-4 mx-4">
-                <a href="#faq_3" class="text-base banner-text-md text-decoration-none stretched-link text-center text-md-start px-md-5"
+                <a href="#faq_3" class="text-base banner-text-h2 text-decoration-none stretched-link text-start text-lg-center px-md-5 ps-4 ps-sm-5"
                    data-bs-toggle="collapse">Q3. MINT價格是多少?</a>
                 <div class="collapse" id="faq_3">
-                    <div class="card-body banner-text-sm mx-3 mx-md-5">
+                    <div class="card-body banner-text-h4 mx-3 mx-md-5">
                         <p>
                             Mint價格第一波為1 SOL。
                         </p>
@@ -595,10 +595,10 @@
 
         <li class="col-12 my-4">
             <div class="card bg-white faq-box py-4 mx-4">
-                <a href="#faq_4" class="text-base banner-text-md text-decoration-none stretched-link text-center text-md-start px-md-5"
+                <a href="#faq_4" class="text-base banner-text-h2 text-decoration-none stretched-link text-start text-lg-center px-md-5 ps-4 ps-sm-5"
                    data-bs-toggle="collapse">Q4. 我可以用我的WANA NFT做什麼?</a>
                 <div class="collapse" id="faq_4">
-                    <div class="card-body banner-text-sm mx-3 mx-md-5">
+                    <div class="card-body banner-text-h4 mx-3 mx-md-5">
                         <p>
                             作為NFT持有者，您可以擁有屬於自己鏈上的NFT，可以選擇持有或販售，在未來路線圖規劃，您將可以替NFT更換您喜愛的造型、依造型算力獲得豐厚獎勵。
                         </p>
@@ -609,10 +609,10 @@
 
         <li class="col-12 my-4">
             <div class="card bg-white faq-box py-4 mx-4">
-                <a href="#faq_5" class="text-base banner-text-md text-decoration-none stretched-link text-center text-md-start px-md-5"
+                <a href="#faq_5" class="text-base banner-text-h2 text-decoration-none stretched-link text-start text-lg-center px-md-5 ps-4 ps-sm-5"
                    data-bs-toggle="collapse">Q5. 如果NFT售完怎麼辦 ?</a>
                 <div class="collapse" id="faq_5">
-                    <div class="card-body banner-text-sm mx-3 mx-md-5">
+                    <div class="card-body banner-text-h4 mx-3 mx-md-5">
                         <p>
                             你可以在Solana Art上購買。
                         </p>
@@ -623,10 +623,10 @@
 
         <li class="col-12 my-4">
             <div class="card bg-white faq-box py-4 mx-4">
-                <a href="#faq_6" class="text-base banner-text-md text-decoration-none stretched-link text-center text-md-start px-md-5"
+                <a href="#faq_6" class="text-base banner-text-h2 text-decoration-none stretched-link text-start text-lg-center px-md-5 ps-4 ps-sm-5"
                    data-bs-toggle="collapse">Q6. 最後注意安全、我們關心每一位夥伴</a>
                 <div class="collapse" id="faq_6">
-                    <div class="card-body banner-text-sm mx-3 mx-md-5">
+                    <div class="card-body banner-text-h4 mx-3 mx-md-5">
                         <p>
                             1、切勿與任何人分享您的私鑰或助記詞。<br>
                             2、切勿單擊通過 Discord、Twitter 或其他渠道上的直接消息發送給您的網址。<br>
